--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <head>
   <title>Background Color Changer</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
+<script src="script.js"></script>
   <div id = "main">
     <div id="itIsNow"></div>
     <div id="container">
